[package]
name = "inkview"
version = "0.1.0"
authors = ["oliver <oliver.haag@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
bit-vec = "0.6"
rand = "0.7"
num = "0.2"
num-derive = "0.2"
num-traits = "0.2"

[build-dependencies]
bindgen = "0.51"
bitflags = "1.0"
lazy_static = "1.3"

[profile.release]
lto = true
panic = 'abort'
